--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App h2 {
+  margin: 18px auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App > * {
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.comment-form input {
+  width: 100%;
+  min-width: 5.5em;
+  text-align: center;
+  padding: 10px;
+  border: none;
+  border-bottom: 2px solid black;
+  font-size: 1.1em;
+  font-weight: 500;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.comments-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15%;
+  flex-direction: column;
+}
+
+.comment-form img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+input:focus {
+  outline: none;
+}
+
+.comment-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+}
+
+.btn {
+  transform: translate(-100%, 115%);
+  padding: 7px 12px;
+  font-size: 0.7em;
+  font-weight: 600;
+  background-color: #4b8bf2;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 10px;
+}
+
+.comment-container {
+  display: flex;
+  justify-items: center;
+  width: 70%;
+}
+
+.comment-container img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.comment-header {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: start;
+  margin-left: 5%;
+}
+.comment-header h4 {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.comment-header p {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.comment-footer {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-self: end;
+  align-self: flex-end;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: aliceblue;
+  margin: 1%;
+  padding: 3%;
+  width: 70%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10%;
+  transform: translate(-55%);
+}
+
+.replies {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+  margin-left: 22%;
 }
